# Universal-DX-Template

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
.claude/: project-context.md  rules.md
.devcontainer/: Dockerfile  devcontainer.json
.gemini/: system-instructions.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
.husky/: commit-msg.sh  pre-commit.sh  pre-push.sh
services/core-api-python/: Dockerfile.python  pyproject.toml
services/core-api-python/src/: main.py
services/core-api-python/src/api/: dependencies.py
services/core-api-python/src/api/routes/: document_router.py
services/core-api-python/src/infrastructure/: ocr_engine.py  rust_client.py
services/core-api-python/src/schema/: document_schema.py
services/core-api-python/src/services/: document_processor.py
services/core-api-python/tests/: test_document_processor.py
services/data-engine-rust/: Cargo.toml  Dockerfile.rust
services/data-engine-rust/migrations/: 20260317122100_create_documents_table.sql
services/data-engine-rust/src/: main.rs
services/data-engine-rust/src/handlers/: document_handler.rs  mod.rs
services/data-engine-rust/src/infrastructure/: db.rs
services/data-engine-rust/src/models/: document_dto.rs  mod.rs
services/data-engine-rust/src/repositories/: document_repo.rs
